<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_dialog"
    android:padding="@dimen/dimen16">

    <ImageView
        android:id="@+id/imgCancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="5dp"
        android:src="@drawable/ic_cancel_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_bold"
        android:includeFontPadding="false"
        android:text="@string/are_you_sure"
        android:textColor="@color/tvTextColor3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgCancel" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:includeFontPadding="false"
        android:textColor="@color/tvTextColor1"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.azercell.cardsystem.common.widgets.buttons.CustomRoundedButton
        android:id="@+id/btnLogout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary"
        android:text="@string/log_out"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:strokeWidth="0dp" />

    <com.azercell.cardsystem.common.widgets.buttons.CustomRoundedButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/cancel"
        android:textColor="@color/tvTextColor3"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:strokeColor="@color/gray2"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>